src/test/deca/context/valid/addition_soustraction_float.deca
//Test simple sur des additions et soustraction de flottants
//----------
//Résultat:
// 1.5 + 4 = 5.5
// 4 - 10.99 = -6.99
// -2.5 + (-2.5) = -5
// -2 -2 -2 + 8,5 -1.1 = 1.4
//----------
//Historique:
//Créé le 13.01.2022

{
float x = 1.5 + 4;
flaot y = 4 - 10.99;
float z = -2.5 + -2.5;
float t = -2 - 2 - 2 + 8.2 - 1.1;
println ( " 1.5 + 4 = ", x);
println ( " 4 - 10,99 = ", y);
println ( " -2.5 + (-2.5) = ", z);
println ( " -2 -2 -2 + 8,5 -1.1 =", t);
}