src/test/deca/context/invalid/not_valid_1.deca
// Test non valide 1:
// a+a=4 n'a aucun sens
// Créé le 13.01.2022
// Pas compilé -> validé [erreur ligne 8]

{
int a = 2;
a + a = 4;
return a;
}